--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-dev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/SimonDunk/app-dev",
+  "homepage": "simondunk.github.io/app-dev",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
